# vnbank-fraud-detection-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dags/: etl_dag.py
src/: __init__.py  data_generator.py  data_visualization.py  etl_pipeline.py  fraud_detection.py  logger.py  main.py
src/config/: __init__.py  settings.py
src/etl/: __init__.py  enricher.py  processor.py
src/fraud/: __init__.py  detector.py  rules.py
src/models/: __init__.py  transaction.py
src/monitoring/: __init__.py  dashboard.py
tests/: __init__.py
tests/unit/: test_etl_processor.py
